# DevilArm

./: .gitignore  Cargo.toml  README.md
cargo-generate/: Cargo.toml
devil-embedded/: Cargo.toml  README.md  build.rs
devil-embedded/.cargo/: config.toml
devil-embedded/src/: infer.rs  main.rs  pio_pwm.rs  sensor.rs  serial.rs  servo.rs
devil-embedded/src/gesture/: mod.rs
devil-embedded/src/usb/: mod.rs  serial.rs
devil-ml/: Cargo.toml  README.md
devil-ml/inference/: Cargo.toml  build.rs
devil-ml/inference/src/: lib.rs
devil-ml/inference/src/model/: mod.rs
devil-ml/model/: Cargo.toml  build.rs
devil-ml/model/src/: lib.rs
devil-ml/training/: Cargo.toml  build.rs
devil-ml/training/data/: savannah's arm v1.csv  savannah's arm v2.csv  savannah's arm v3.csv  savannah's arm v4.csv  test.csv  train.csv
devil-ml/training/src/: data.rs  lib.rs  main.rs  training.rs
devil-trainer/: README.md  package-lock.json  package.json
devil-trainer/src/: App.css
devil-trainer/src-tauri/: Cargo.toml
devil-trainer/src-tauri/capabilities/: default.json
devil-trainer/src-tauri/src/: lib.rs  serial.rs
devil-trainer/src/components/: Checkpoint.tsx  FileSelector.tsx  Terminal.tsx
media/: README.md
src/: main.rs  normalize.rs  pio_pwm.rs  sensor.rs  servo.rs  setup.rs
