[package]
edition = "2021"
name = "devil_arm"
version = "0.1.0"
license = "MIT"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
# embassy-usb-logger = { version = "0.1.0" }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.7.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

microfft = "0.6.0"

[dependencies.num-complex]
version = "0.4"
default-features = false

# Doing this since the crates.io package isn't up to date. Also it's recommended by the docs https://embassy.dev/book/dev/new_project.html
[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
# embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "bab4affe7cd116f44eb378c8f32e58e6993adbf5" }

[profile.release]
debug = 2
