[workspace]
resolver = "2"
members = [
  "devil-embedded",
  "devil-ml/training",
  "devil-ml/model",
  "devil-trainer/src-tauri",
]

default-members = ["devil-ml/training"]

[workspace.package]
version = "0.1.0"
authors = [
  "Bjorn Beishline",
  "Nathan Nabaty",
  "Ryan Kinsella",
  "Savannah Gong",
]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
once_cell = "1.20.1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
burn = { version = "0.15.0", default-features = false }
burn-import = { version = "0.15.0" }
directories = "5.0.1"

[profile.release]
strip = false
lto = true
codegen-units = 1
panic = "abort"
debug = true
