[package]
name = "devil-ml"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
burn = { workspace = true, default-features = false, features = ["ndarray"] }
model = { path = "../model" }

[build-dependencies]
burn-import = { workspace = true }
training = { path = "../training" }
burn = { workspace = true, features = ["train", "vision"] }
model = { path = "../model" }
