[package]
name = "devil-ml"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
burn = { workspace = true, features = ["ndarray"] }
model = { path = "../model" }

[build-dependencies]
training = { path = "../training" }
burn = { workspace = true, features = ["train"] }
model = { path = "../model" }
