[package]
name = "training"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true, features = ["default", "train", "wgpu"] }
csv = "1.3.0"
devil-ml-model = { path = "../model" }
rand = "0.8.5"
serde = { workspace = true }

[build-dependencies]
devil-ml-model = { path = "../model" }
csv = "1.3.0"
rand = "0.8.5"
serde = { workspace = true }
