[package]
name = "devilarmtrainer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devilarmtrainer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri-plugin-serialplugin = "2.3.2"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-websocket = "2.0.0-rc"
serialport = "4.5.0"
anyhow = { workspace = true }
once_cell = { workspace = true }
ssh2 = "0.9.4"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-os = "2"
